--- a/07-restserver/public/index.html
+++ b/07-restserver/public/index.html
@@ -4,9 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acceso denegado</title>
+    <title>Acceso Google</title>
 </head>
 <body>
-    <h1>Acceso denegado</h1>
+    <h1>Acceso Google-sign in</h1>
+    <hr>
+    <div id="g_id_onload"
+         data-client_id="194887929401-kop67sna6l92r0bfono9as1irjf2s1eb.apps.googleusercontent.com"
+         data-callback="handleCredentialResponse"
+         data-auto_prompt="false">
+      </div>
+      <div class="g_id_signin"
+         data-type="standard"
+         data-size="large"
+         data-theme="outline"
+         data-text="sign_in_with"
+         data-shape="rectangular"
+         data-logo_alignment="left">
+      </div>
+
+      <button id="g_id_salida">Sign Out</button>
+
+
+
+
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        function handleCredentialResponse(response) {
+           // Google Token: ID_TOKEJN
+           console.log('id_token',response.credential);
+
+           fetch('http://localhost:8080/api/auth/google',{
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({
+                id_token: response.credential
+            })
+           })
+           .then( resp => resp.json() )
+           .then( resp => {
+            console.log(resp);
+            localStorage.setItem('email', resp.usuario.correo);
+            location.reload();
+           })
+           .catch( console.warn);
+      
+        }
+
+        const button = document.getElementById('g_id_salida');
+        button.onclick = () => {
+         console.log(google.accounts.id);
+         console.log('google.accounts.id');
+          google.accounts.id.disableAutoSelect();
+
+          google.accounts.id.revoke( localStorage.getItem('email'), done => {
+            localStorage.clear();
+            location.reload();
+          } );
+        }
+
+      </script>      
 </body>
 </html>
